--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,12 @@ body {
     background-color: green;
 }
 
+body.red-bg {
+    background-color: red;
+    color: white;
+    padding: 100px;
+}
+
 h1 {
     font-size: 120px;
 }
